Fix misaligned inputs in check for response form element.

--- a/app/stylesheets/forms/_email.scss
+++ b/app/stylesheets/forms/_email.scss
@@ -1,4 +1,4 @@
-.email-thread-item {
+g.email-thread-item {
   margin: 0 0 40px;
 }
 
@@ -12,6 +12,10 @@
 
   .block-arrow-top{
     margin-top: 35px;
+  }
+
+  .input-append {
+    margin-bottom: 0;
   }
 }
 
